Modif Index->index

--- a/ToutesLesRecettes.html
+++ b/ToutesLesRecettes.html
@@ -13,7 +13,7 @@
 				</div>
 				<nav class="menu">
 					<ul>
-						<li class="elementmenu"><a href="Index.html">Accueil</li>
+						<li class="elementmenu"><a href="index.html">Accueil</li>
 						<li class="elementmenu"><a href="Apropos.html">A propos</li>
 						<li class="elementmenu"><a href="ToutesLesRecettes.html">Toutes Les Recettes</li>
 						<li class="elementmenu"><a href="#">Glossaire</li>
